<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainGivingsActivity">

    <TextView
        android:id="@+id/fwoNumberTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/titillium_web"
        android:text="@string/fwo_number_title"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/fundsTabeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView">

        <TableRow
            android:id="@+id/headerTableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#D3D3D3"
            android:gravity="center">

            <TextView
                android:id="@+id/fundsTableHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/fund_title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/amountTableHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/amount_title"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BDBDBD">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_span="2"
                android:fontFamily="@font/titillium_web"
                android:text=""></TextView>
        </TableRow>

        <TableRow
            android:id="@+id/fwoTableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/fwoFundsTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/fwo_fund_title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fwoAmountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/loading"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/divider2"
            android:layout_height="2dp"
            android:background="#BDBDBD">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_span="2"
                android:fontFamily="@font/titillium_web"
                android:text=""></TextView>
        </TableRow>

        <TableRow
            android:id="@+id/developmentTableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/developmentFundsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/development_fund_title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/developmentAmountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/loading"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BDBDBD">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_span="2"
                android:fontFamily="@font/titillium_web"
                android:text=""></TextView>
        </TableRow>

        <TableRow
            android:id="@+id/unitedAppealTableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/unitedAppealFundsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/united_appeal_fund_title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/unitedAppealAmountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/loading"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BDBDBD">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_span="2"
                android:fontFamily="@font/titillium_web"
                android:text=""></TextView>
        </TableRow>

        <TableRow
            android:id="@+id/worldDevelopmentTableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/worldDevelopmentFundsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/world_development_fund_title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/worldDevelopmentAmountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/loading"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BDBDBD">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_span="2"
                android:fontFamily="@font/titillium_web"
                android:text=""></TextView>
        </TableRow>

        <TableRow
            android:id="@+id/lambegAppealTableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/lambegAppealFundsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/lambeg_project_fund_title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lambegAppealAmountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/loading"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BDBDBD">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_span="2"
                android:fontFamily="@font/titillium_web"
                android:text=""></TextView>
        </TableRow>

        <TableRow
            android:id="@+id/totalTableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/totalFundsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/total_fund_title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/totalAmountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/loading"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/titillium_web"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/titillium_web"
        android:text="@string/date_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/fundsTabeLayout"
        app:layout_constraintStart_toStartOf="@+id/fundsTabeLayout"
        app:layout_constraintTop_toBottomOf="@+id/fwoNumberTitleTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>